# t-regex

./: .gitignore  README.md  stack.yaml  t-regex.cabal
src/Data/: GenericK.hs  MultiGenerics.hs  TreeRegex.hs
src/Data/Regex/: Example.hs  Generic.hs  Generics.hs  MultiExample.hs  MultiGenerics.hs  MultiRules.hs  Rules.hs  TH.hs
src/Data/Regex/Example/: FPDag2015.hs  Mono.hs  Multi.hs
src/Data/TreeRegex/: Dump.hs  Example.hs  Mono.hs  Multi.hs  Poly.hs
src/Test/QuickCheck/: Arbitrary1.hs
