name:                t-regex
version:             0.1.0.0
-- synopsis:            
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.GenericK,
                       Data.TreeRegex.Mono,
                       Data.TreeRegex.Multi,
                       Data.TreeRegex.Example
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.7
  hs-source-dirs:      src
  default-language:    Haskell2010
