name:                t-regex
version:             0.1.0.0
-- synopsis:            
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:   Data.MultiGenerics,
                     Data.Regex.Generics,
                     Data.Regex.MultiGenerics,
                     Data.Regex.Example.Mono,
                     Data.Regex.Example.Multi,
                     Data.Regex.TH
  -- other-modules:       
  -- other-extensions:    
  build-depends:     base >= 4.7,
                     containers,
                     recursion-schemes >= 4 && < 5,
                     template-haskell,
                     haskell-src-exts,
                     haskell-src-meta
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
